--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ capybara-*.html
 /tmp/*
 /db/*.sqlite3
 /public/system/*
-/public/uploads/photo/image/*
+/public/uploads/*
+/public/uploads/*
 /coverage/
 /spec/tmp/*
 **.orig
