--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ pickle-email-*.html
 .project
 config/initializers/secret_token.rb
 config/database.yml
+
+# Ignore application configuration
+/config/application.yml
