--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 .project
+/config/database.yml
 
 # Ignore application configuration
 /config/application.yml
